opam-version: "2.0"
name: "tldr"
version: "0.1"
synopsis: "TLDR Pages"
maintainer: "Leandro Ostera <leandro@ostera.io>"
authors: "Leandro Ostera <leandro@ostera.io>"
license: "MIT"
homepage: "https//github.com/ostera/tldr"
bug-reports: "https//github.com/ostera/tldr/issues"
depends: [
  "fmt"
  "base64"
  "httpkit"
  "httpkit-lwt"
  "logs"
  "lwt"
  "uri"
  "rresult"
  "yojson"
  "fpath"

  "dune" {build}
  "reason" {build}
]
build: [make "build"]
install: [make "install"]
